--- a/src/componentes/Navbar/Navbar.css
+++ b/src/componentes/Navbar/Navbar.css
@@ -17,3 +17,48 @@
     font-size: 150%;
     transition: 0.5s;
 }
+
+@media screen and (max-width: 1024px) {
+    
+    .menu {
+    }
+
+    .menuFlutuante {
+        width: 40%;
+        background-color: var(--corFundo);
+        position: absolute;
+        top: -10px;
+        right: 0;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        border-left: 1px solid black;
+        box-shadow: 1px 1px 70px #75725c;
+        text-align: start;
+
+    }
+
+    .menuFlutuante .botaoNav {
+        margin: 20px 30px;
+        font-size: 30px;
+        border-bottom: 2px solid rgba(0, 0, 0, 0.246);
+        padding-bottom: 15px;
+    }
+
+    .menuFlutuante .logoMenu {
+        width: 50%;
+    }
+
+    .menuFlutuante div {
+        display: flex;
+        justify-content: center;
+        margin-top: 30px;
+    }
+
+    .iconeFechar {
+        position: absolute;
+        right: 20px;
+        top: 20px;
+
+    }
+}
