--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  --corFundo: #85826b;
 }
 
 code {
@@ -14,5 +16,5 @@ code {
 
 body {
   font-family: 'Josefin Sans', sans-serif;
-  background-color: #85826b;
+  background-color: var(--corFundo);
 }
